samples/_failures_safe/1761294320_11f54f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd73bc2d.c: In function ‘main’:
./samples/SAFE/__tmp_fd73bc2d.c:132:5: error: expected expression at end of input
  132 |     if (len > 0 && input[len-1] == '\n') input[--len] =
      |     ^~
./samples/SAFE/__tmp_fd73bc2d.c:132:5: error: expected declaration or statement at end of input
